src/test/ui/parser/issue-24780.stderr
error: expected one of `!`, `+`, `::`, `where`, or `{`, found `>`
  --> $DIR/issue-24780.rs:17:23
   |
LL | fn foo() -> Vec<usize>> {
   |                       ^ expected one of `!`, `+`, `::`, `where`, or `{` here

error: aborting due to previous error

